static/dashboard/css/relax.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;700&display=swap');

*{
    margin: 0;
    padding: 0;
    font-family: "Poppins", sans-serif;
}

body{
    background-image: url("../../src/default_relax_bg.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    box-sizing: border-box;
    background-color: white;
    color: black;
    position: relative;
    min-height: 100vh;
    width: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
}

header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px 10%;
    background-color: #32393E;
}

li, a, button{
    font-weight: 500;
    font-size: 16px;
    color: white;
    text-decoration: none;
}

footer{
    background-color: black;
    color: white;
    text-align: center;
    padding: 0.5%;
    width: 100%;
    left: 0;
    bottom: 0;
    position: fixed;
}

.logo{
    cursor: pointer;
    background-color: #32393E;
    max-height: 50px;
    max-width: 90px;
}

.nav__links{
    list-style: none;
    background-color: #32393E;
}

.nav__links li{
    display: inline-block;
    padding: 0px 20px;
    background-color: #32393E;
}

.nav__links li a{
    transition: all 0.3s ease 0s;
    background-color: #32393E;
}

.nav__links li a:hover{
    color: cyan;
}

button{
    padding: 9px 25px;
    background-color: rgba(0,136,169,1);
    border: none;
    border-radius: 50px;
    cursor: pointer;
    transition: all 0.3s ease 0s;
}

.cta{
    background-color: #32393E;
}

button:hover{
    background-color: rgba(0,136,169,0.8);
}

.sidebar{
    position: fixed;
    width: 50px;
    height: 100%;
    background-color: #323950;
    top: 0;
    left: 0;
    padding: 6px 14px;
    transition: all 0.5s ease;
}

.sidebar.active{
    width: 250px;
}

.sidebar .logo_content .logo{
    color: white;
    display: flex;
    height: 50px;
    width: 100%;
    align-items: center;
    opacity: 0;
    pointer-events: none;
    transition: 0.2s ease;
}

.sidebar.active .logo_content .logo{
    opacity: 1;
    pointer-events: none;
    transition: 0.2s ease;
}

.logo_content .logo img{
    font-size: 28px;
    margin-right: 5px;
    max-width: 90px;
    max-height: 60px;
}

.logo_content .logo .logo_name{
    font-size: 20px;
    font-weight: 400;
}

.sidebar #menu{
    position: absolute;
    color: white;
    left: 50%;
    top: 6px;
    font-size: 20px;
    height: 50px;
    width: 50px;
    text-align: center;
    line-height: 50px;
    transform:  translateX(-50%);
}

.sidebar #menu:hover{
    transition: 0.5s ease;
    background: black;
}

.sidebar.active #menu{
    left: 90%;
}

.sidebar ul{
    margin-top: 20px;
}

.sidebar ul li{
    list-style: none;
    height: 50px;
    width: 100%;
    margin: 0 5px;
    position: relative;
    line-height: 50px;
}

.sidebar ul li a{
    color: white;
    display: flex;
    align-items: center;
    text-decoration: none;
    transition: all 0.4s ease;
    border-radius: 12px;
    white-space: nowrap;
    padding-left: 3px;
}

.sidebar ul li a:hover{
    background: white;
    color: black;
    padding-left: 8px;
}

.sidebar ul li a img{
    min-height: 40px;
    min-width: 40px;
    max-width: 40px;
    max-height: 40px;
    border-radius: 12px;
    line-height: 50px;
    text-align: center;
}

.sidebar .links_name{
    opacity: 0;
    pointer-events: none;
    transition: 0.2s ease;
}

.sidebar.active .links_name{
    opacity: 1;
    pointer-events: auto;
    transition: 0.2s ease;
}

.sidebar ul li .tooltip{
    position: absolute;
    height: 35px;
    width: 122px;
    background: white;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    left: 122px;
    top: 0;
    transform: translate(-50% , -50%);
    border-radius: 6px;
    line-height: 35px;
    text-align: center;
    color: black;
    transition: 0s;
    opacity: 0;
    pointer-events: none;
    display: block;
}

.sidebar.active ul li .tooltip{
    display: none;
}

.sidebar ul li:hover .tooltip{
    top: 50%;
    transition: all 0.5s ease;
    opacity: 1;
}

.sidebar.collapse{
    margin-left: -10%;
    transition: 0.5s ease;
    opacity: 0;
}

.home_section.collapse{
    opacity: 0;
    margin-left: 250px;
    transition: 0.5s ease;
    margin-top: -10%;
    margin-bottom: 3%;
}

.home_section{
    transition: 0.5s ease;
    margin-left: 75px;
    margin-bottom: 1%;
}

.home_section.active{
    transition: 0.5s ease;
    margin-left: 250px;
}

.agenda{
    margin-left: 100px;
    transition: 0.5s ease;
}

.agenda.active{
    margin-left: 300px;
    transition: 0.5s ease;
}

form{
    display: flex;
    min-height: 15vh;
    justify-content: left;
    align-items: center;
}

form input, form button{
    padding: 0.4 rem;
    border-radius: 10px;
    font-size: 1.6 rem;
    background: white;
}

form button{
    color: grey;
    background: aqua;
    cursor: pointer;
    transition: all 0.3 ease;
    padding: 5px 10px;
    font-size: 12px;
    margin-left: 5px;
}

form button:hover{
    background-color: lightblue;
    color: black;
}

select{
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    outline: none;
    border: none;
}

.select{
    margin: 1rem;
    position: relative;
    overflow: hidden;
}

select{
    color: #c065c0;
    width: 8rem;
    cursor: pointer;
    padding: 0.7rem;
}

.select::after{
    content: "\25bc";
    position: absolute;
    color: #c065c0;
    top: 7px;
    right: 6px;
    pointer-events: none;
}

.select:hover::after{
   color: #583429;
}

.todo_container{
    display: flex;
    justify-content: left;
    align-items: center;
}

.todo_list{
    min-width: 40%;
    list-style: none;
}

.todo_input{
    padding-left: 10px;
    padding-right: 10px;
}

.todo{
    margin: 5px auto;
    background: rgb(46, 44, 44);
    color: #000000;
    display: flex;
    font-size: 1.2rem;
    padding: 0.3rem;
    justify-content: space-between;
    align-items: center;
    transition: all 0.5s ease;
    border-radius: 10px;
}

.todo li {
    flex: 1;
    white-space: nowrap;
}

.complete_btn, .delete_btn{
    padding: 0.5rem;
    background: #ff3700;
    color: white;
    border: none;
    margin-left: 0.2rem;
    cursor: pointer;
    font-size: 1rem;
}

.complete_btn{
    background: rgb(67, 179, 67);
}
.complete_btn:active{
    background: green;
}

.delete_btn:active{
    background: #b65337;
}

.fa-trash, .fa-check{
    pointer-events: none;
}

.completedItem{
    text-decoration: line-through;
    opacity: 0.5;
    transform: scale(0.96);
}

.fall{
    transform: 0.3 ease;
    opacity: 0;
}

.collapse{
    display:flexbox;
    margin-left: 90%;
    background-color: black;
}

.collapse:hover{
    color: cyan;
    background-color: black;
}

.text{
    color: white;
    font-size: xx-large;
    text-align: center;
    margin-top: 7%;
    transition: 0.5s ease;
    margin-left: 1%;
}

.text.position{
    margin-top: 11%;
    transition: 0.5s ease;
}

.audio{
    margin-top: 2%;
    text-align: center;
}

